# my-fzf-wrapper

./: .envrc  .gitignore  AGENTS.md  Cargo.toml  flake.nix  justfile  run
.claude/agents/: build-tester.md  code-reviewer.md  implementer.md  plan-reviewer.md  planner.md
.claude/skills/ask-plan-change/: SKILL.md
.claude/skills/ask-plan-change/scripts/: ask_user_popup.sh
.claude/skills/implement-with-review/: SKILL.md  review-config.yml
.claude/skills/rust-code-review/: SKILL.md
docs/: TODO.md  architecture.md
e2e/: biome.json  package.json  pnpm-lock.yaml  test.spec.ts  vitest.config.ts
nix/: my-package.nix  my-shell.nix
src/: client.rs  config.rs  env.rs  lib.rs  logger.rs  main.rs  method.rs  nvim.rs  server.rs  state.rs  types.rs  utils.rs
src/external_command/: bat.rs  fd.rs  fzf.rs  gh.rs  git.rs  glow.rs  mod.rs  rg.rs  zoxide.rs
src/mode/: bookmark.rs  browser_bookmark.rs  browser_history.rs  buffer.rs  diagnostics.rs  fd.rs  git_branch.rs  git_diff.rs  git_log.rs  git_reflog.rs  git_review.rs  git_status.rs  livegrep.rs  mark.rs  menu.rs  mod.rs  mru.rs  nas_worktree.rs  nvim_session.rs  pr.rs  pr_diff.rs  pr_list.rs  pr_threads.rs  process_compose.rs  rg.rs  runner.rs  utils.rs  visits.rs  zoxide.rs
src/mode/lib/: actions.rs  cache.rs  item.rs  mod.rs
src/utils/: bat.rs  browser.rs  command.rs  fd.rs  fzf.rs  gh.rs  git.rs  glow.rs  mod.rs  path.rs  rg.rs  sqlite.rs  vscode.rs  xsel.rs  zoxide.rs
tests/: integration_tests.rs  menu_load.rs  mode_fd.rs  mode_runner.rs  mode_switching.rs
tests/common/: mod.rs
