[package]
name = "myfzf-wrapper-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
nvim-rs = { version = "0.4", features = ["use_tokio"] }
tokio = { version = "1.15", features = ["full"] }
tokio-util = { version = "0.6", features = ["compat"] }
parity-tokio-ipc = "0.9"
rmpv = { version = "1.0", features = ["with-serde"] }
async-trait = "0.1"
clap = { version = "3.2", features = ["derive", "env"] }
serde = { version = "1.0",  features = ["derive"]  }
serde_json = { version = "1.0" }
rand = { version = "0.8" }
log = { version = "0.4" }
log4rs = { version = "1.1", features = ["file_appender", "json_encoder"] }
futures = { version = "0.3" }
