[package]
name = "fzfw"
version = "0.1.0"
edition = "2021"

[dependencies]
nvim-rs = { version = "0.4", features = ["use_tokio"] }
tokio = { version = "1.15", features = ["full"] }
tokio-util = { version = "0.6", features = ["compat"] }
parity-tokio-ipc = "0.9"
rmpv = { version = "1.0", features = ["with-serde"] }
async-trait = { version = "0.1" }
clap = { version = "3.2", features = ["derive", "env"] }
serde = { version = "1.0",  features = ["derive"] }
erased-serde = { version = "0.3" }
serde_json = { version = "1.0" }
rand = { version = "0.8" }
slog = { version = "2.7", features = ["nested-values"] }
slog-json = { version = "2.6", features = ["nested-values"] }
slog-scope = { version = "4.4" }
slog-async = { version = "2.7", features = ["nested-values"] }
futures = { version = "0.3" }
chrono = { version = "0.4" }
once_cell = { version = "1.13" }
regex = { version = "1.6" }
rusqlite = { version = "0.28", features = ["bundled"] }
ansi_term = "0.12.1"
libc = "0.2.149"
shellwords = "1.1.0"
git2 = "0.18.1"
unidiff = "0.3.3"
tempfile = "3.8.1"
shellexpand = "3.1.0"
reqwest = { version = "0.12.2", features = ["json"] }
unicode-width = "0.1.11"
